--- a/fun4all/offline/papers/ppg239/references.bib
+++ b/fun4all/offline/papers/ppg239/references.bib
@@ -780,5 +780,18 @@ author = {Emanuele R. Nocera and Richard D. Ball and Stefano Forte and Giovanni 
   url = {https://link.aps.org/doi/10.1103/PhysRevD.105.074022}
 }
 
-
-
+@article{PhysRevD.106.L031502,
+  title = {Polarized antimatter in the proton from a global QCD analysis},
+  author = {Cocuzza, C. and Melnitchouk, W. and Metz, A. and Sato, N.},
+  collaboration = {Jefferson Lab Angular Momentum (JAM) Collaboration},
+  journal = {Phys. Rev. D},
+  volume = {106},
+  issue = {3},
+  pages = {L031502},
+  numpages = {6},
+  year = {2022},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.106.L031502},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.106.L031502}
+}
